--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "moongoose": "^0.0.1"
   }
 }
